# Fuzzy-Tic-Tac-Toe

./: CMakeLists.txt  README.md
cmake/: FindGMPXX.cmake
include/: Cell.hpp  Color.hpp  Exceptions.hpp  FTTT.hpp  FTTTBase.hpp  FTTTBoard.hpp  FTTTBoard.ipp  FTTTBoard.tpp  FTTTGame.hpp  FuzzyTTT.hpp  GameConfig.hpp
src/: Cell.cpp  FTTT.cpp  FTTTBase.cpp  FTTTBoard.cpp  FTTTGame.cpp  FuzzyTTT.cpp  main.cpp  python_export.cpp
